Making a chat box for testing commands without twitch.
