# src/broker-server/rlbot_twitch_broker_server/models/__init__.py
@@ -5,3 +5,4 @@ from __future__ import absolute_import
 # import models into model package
 from rlbot_twitch_broker_server.models.action_server_registration import ActionServerRegistration
 from rlbot_twitch_broker_server.models.api_response import ApiResponse
+from rlbot_twitch_broker_server.models.chat_line import ChatLine
