# src/broker-server/rlbot_twitch_broker_server/models/chat_line.py
@@ -1,0 +1,88 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from rlbot_twitch_broker_server.models.base_model_ import Model
+from rlbot_twitch_broker_server import util
+
+
+class ChatLine(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, username: str=None, message: str=None):  # noqa: E501
+        """ChatLine - a model defined in Swagger
+
+        :param username: The username of this ChatLine.  # noqa: E501
+        :type username: str
+        :param message: The message of this ChatLine.  # noqa: E501
+        :type message: str
+        """
+        self.swagger_types = {
+            'username': str,
+            'message': str
+        }
+
+        self.attribute_map = {
+            'username': 'username',
+            'message': 'message'
+        }
+        self._username = username
+        self._message = message
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ChatLine':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The ChatLine of this ChatLine.  # noqa: E501
+        :rtype: ChatLine
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def username(self) -> str:
+        """Gets the username of this ChatLine.
+
+
+        :return: The username of this ChatLine.
+        :rtype: str
+        """
+        return self._username
+
+    @username.setter
+    def username(self, username: str):
+        """Sets the username of this ChatLine.
+
+
+        :param username: The username of this ChatLine.
+        :type username: str
+        """
+
+        self._username = username
+
+    @property
+    def message(self) -> str:
+        """Gets the message of this ChatLine.
+
+
+        :return: The message of this ChatLine.
+        :rtype: str
+        """
+        return self._message
+
+    @message.setter
+    def message(self, message: str):
+        """Sets the message of this ChatLine.
+
+
+        :param message: The message of this ChatLine.
+        :type message: str
+        """
+
+        self._message = message
